--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -226,18 +226,20 @@ We create a function that echoes to us the time it took for Emacs to start, alon
 * Private Config
 There's personal information that I'd rather not be in my public dotfiles, so they're set in a private NixOS module. I convert that information from a Nix attrset into JSON, and then load it into a nested alist in Emacs here.
 #+begin_src elisp
-  (defvar my/private
-    (with-temp-buffer
-      (insert-file-contents (expand-file-name "private.json" user-emacs-directory))
-      (json-parse-buffer :object-type 'alist))
-    "My private configuration data.")
+  (desktop!
+   (defvar my/private
+     (with-temp-buffer
+       (insert-file-contents (expand-file-name "private.json" user-emacs-directory))
+       (json-parse-buffer :object-type 'alist))
+     "My private configuration data."))
 #+end_src
 
 Convenience function to access nested elements.
 #+begin_src elisp
-  (defun my/private (&rest keys)
-    "Return value of `my/private' by recursively following KEYS."
-    (map-nested-elt my/private keys))
+  (desktop!
+   (defun my/private (&rest keys)
+     "Return value of `my/private' by recursively following KEYS."
+     (map-nested-elt my/private keys)))
 #+end_src
 
 * =theuniverse=
@@ -254,11 +256,12 @@ Paths for my main Folders of Everything™, to make them convenient to reference
 ** No Littering
 Don't leave random files everywhere in the filesystem. Paths must be set before loading the package. This has to be loaded before most of the packages that it configures, so it's pretty early.
 #+begin_src elisp
-  (setq no-littering-etc-directory
-        (expand-file-name "emacs/" (getenv "XDG_CONFIG_HOME"))
-        no-littering-var-directory
-        (expand-file-name "emacs/" (getenv "XDG_DATA_HOME")))
-  (require 'no-littering)
+  (desktop!
+   (setq no-littering-etc-directory
+         (expand-file-name "emacs/" (getenv "XDG_CONFIG_HOME"))
+         no-littering-var-directory
+         (expand-file-name "emacs/" (getenv "XDG_DATA_HOME")))
+   (require 'no-littering))
 #+end_src
 
 Again, don't leave random backup files and lockfiles everywhere.
@@ -471,7 +474,8 @@ Navigate through sub-units of words (e.g. CamelCase).
 ** Auth Source
 GPG is a pain to work with, so tell Auth Source to just use the default Secret Service settings, which is much easier to deal with.
 #+begin_src elisp
-  (setq auth-sources '(default))
+  (desktop!
+   (setq auth-sources '(default)))
 #+end_src
 
 ** Clipboard
@@ -514,58 +518,60 @@ Recursive minibuffers allow usage of the minibuffer when in the minibuffer, "rec
 ** Prefer Frames
 I want to use frames rather than windows for most operations, so we configure [[help:display-buffer-base-action][display-buffer-base-action]] to display buffers in frames by default. Setting [[help:frame-auto-hide-function][frame-auto-hide-function]] fixes functions like [[help:quit-window][quit-window]] not working.
 #+begin_src elisp
-  (setq display-buffer-base-action '(display-buffer-pop-up-frame)
-        frame-auto-hide-function #'delete-frame)
+  (desktop!
+   (setq display-buffer-base-action '(display-buffer-pop-up-frame)
+         frame-auto-hide-function #'delete-frame))
 #+end_src
 
 Deal with various things that don't play nice with this setup.
 #+begin_src elisp
-  ;; `async-shell-command'
-  (add-to-list 'display-buffer-alist
-               `(,(regexp-quote shell-command-buffer-name-async)
-                 display-buffer-same-window))
+  (desktop!
+   ;; `async-shell-command'
+   (add-to-list 'display-buffer-alist
+                `(,(regexp-quote shell-command-buffer-name-async)
+                  display-buffer-same-window))
 
-  ;; `org-read-date'
-  (add-to-list 'display-buffer-alist
-               '((derived-mode . calendar-mode)
-                 display-buffer-pop-up-window))
+   ;; `org-read-date'
+   (add-to-list 'display-buffer-alist
+                '((derived-mode . calendar-mode)
+                  display-buffer-pop-up-window))
 
-  ;; Magit diff buffers
-  (add-to-list 'display-buffer-alist
-               '((major-mode . magit-diff-mode)
-                 display-buffer-pop-up-window))
+   ;; Magit diff buffers
+   (add-to-list 'display-buffer-alist
+                '((major-mode . magit-diff-mode)
+                  display-buffer-pop-up-window))
 
-  ;; Org Src buffers
-  (after! org
-    (setopt org-src-window-setup 'current-window))
+   ;; Org Src buffers
+   (after! org
+     (setopt org-src-window-setup 'current-window))
 
-  ;; Org Capture pops up a useless frame without this
-  (add-to-list 'display-buffer-alist
-               `(,(rx "*Capture*")
-                 display-buffer-pop-up-window))
+   ;; Org Capture pops up a useless frame without this
+   (add-to-list 'display-buffer-alist
+                `(,(rx "*Capture*")
+                  display-buffer-pop-up-window))
 
-  ;; Org LaTeX preview spams frames without this
-  (add-to-list 'display-buffer-alist
-               `(,(rx "*Org Preview LaTeX Output*")
-                 display-buffer-pop-up-window))
+   ;; Org LaTeX preview spams frames without this
+   (add-to-list 'display-buffer-alist
+                `(,(rx "*Org Preview LaTeX Output*")
+                  display-buffer-pop-up-window))
 
-  ;; Sly
-  (add-to-list 'display-buffer-alist
-               '((major-mode . sly-mrepl-mode)
-                 display-buffer-reuse-window))
-  (add-to-list 'display-buffer-alist
-               '((major-mode . sly-stickers--replay-mode)
-                 display-buffer-pop-up-window))
-  ;; Going through stickers repeatedly opens frames without this.
-  (define-advice sly-stickers--find-and-flash
-      (:around (fn &rest args) popup-fix)
-    (let ((display-buffer-overriding-action '(display-buffer-reuse-window)))
-      (apply fn args)))
+   ;; Sly
+   (add-to-list 'display-buffer-alist
+                '((major-mode . sly-mrepl-mode)
+                  display-buffer-reuse-window))
+   (add-to-list 'display-buffer-alist
+                '((major-mode . sly-stickers--replay-mode)
+                  display-buffer-pop-up-window))
+   ;; Going through stickers repeatedly opens frames without this.
+   (define-advice sly-stickers--find-and-flash
+       (:around (fn &rest args) popup-fix)
+     (let ((display-buffer-overriding-action '(display-buffer-reuse-window)))
+       (apply fn args)))
 
-  ;; Fixes Corfu popupinfo dialog with Emacs Lisp content.
-  (define-advice elisp--company-doc-buffer (:around (fn &rest args) popup-fix)
-    (let (display-buffer-base-action)
-      (apply fn args)))
+   ;; Fixes Corfu popupinfo dialog with Emacs Lisp content.
+   (define-advice elisp--company-doc-buffer (:around (fn &rest args) popup-fix)
+     (let (display-buffer-base-action)
+       (apply fn args))))
 #+end_src
 
 ** Capitalization
@@ -975,11 +981,12 @@ Minions provides a clean minor mode menu implementation that allows customizing 
 ** Nyan Mode
 This is such an important addition to Emacs.
 #+begin_src elisp
-  (require! 'nyan-mode)
-  (setq nyan-bar-length 20
-        nyan-minimum-window-width 48
-        nyan-animate-nyancat t)
-  (nyan-mode)
+  (desktop!
+   (require! 'nyan-mode)
+   (setq nyan-bar-length 20
+         nyan-minimum-window-width 48
+         nyan-animate-nyancat t)
+   (nyan-mode))
 #+end_src
 
 ** ElDoc Box
@@ -1027,14 +1034,15 @@ Display buffer action to show Transients in a new popup frame. Window rules (via
 
 Also, since showing a frame can be slow sometimes, delay showing a Transient menu for half a second, for the common case in which the target key is already known.
 #+begin_src elisp
-  (after! transient
-    (setopt transient-display-buffer-action
-            '(display-buffer-pop-up-frame
-              (pop-up-frame-parameters
-               (name . "*transient*")
-               (width . 80)
-               (height . 15)))
-            transient-show-popup 0.5))
+  (desktop!
+   (after! transient
+     (setopt transient-display-buffer-action
+             '(display-buffer-pop-up-frame
+               (pop-up-frame-parameters
+                (name . "*transient*")
+                (width . 80)
+                (height . 15)))
+             transient-show-popup 0.5)))
 #+end_src
 
 * Keybindings
@@ -1083,114 +1091,115 @@ There's no built-in function to delete the current file, so here's mine.
 
 ** Meow
 #+begin_src elisp
-  (require! 'meow)
+  (desktop!
+   (require! 'meow)
 
-  (setq meow-cheatsheet-layout meow-cheatsheet-layout-colemak-dh
-        meow-use-clipboard t
-        meow-keypad-self-insert-undefined nil
-        auto-save-visited-predicate (##not (meow-insert-mode-p)))
-  (ef-themes-with-colors
-    (custom-set-faces
-     `(meow-insert-indicator ((t :foreground ,fg-added)))
-     `(meow-beacon-indicator ((t :foreground ,fg-changed)))
-     `(meow-keypad-indicator ((t :foreground ,fg-removed)))))
+   (setq meow-cheatsheet-layout meow-cheatsheet-layout-colemak-dh
+         meow-use-clipboard t
+         meow-keypad-self-insert-undefined nil
+         auto-save-visited-predicate (##not (meow-insert-mode-p)))
+   (ef-themes-with-colors
+     (custom-set-faces
+      `(meow-insert-indicator ((t :foreground ,fg-added)))
+      `(meow-beacon-indicator ((t :foreground ,fg-changed)))
+      `(meow-keypad-indicator ((t :foreground ,fg-removed)))))
 
-  (meow-motion-define-key
-   '("e"        . meow-next)
-   '("u"        . meow-prev)
-   '("<escape>" . keyboard-escape-quit))
+   (meow-motion-define-key
+    '("e"        . meow-next)
+    '("u"        . meow-prev)
+    '("<escape>" . keyboard-escape-quit))
 
-  (meow-leader-define-key
-   '("?" . meow-cheatsheet)
-   '("1" . meow-digit-argument)
-   '("2" . meow-digit-argument)
-   '("3" . meow-digit-argument)
-   '("4" . meow-digit-argument)
-   '("5" . meow-digit-argument)
-   '("6" . meow-digit-argument)
-   '("7" . meow-digit-argument)
-   '("8" . meow-digit-argument)
-   '("9" . meow-digit-argument)
-   '("0" . meow-digit-argument)
-   '("l" . meow-universal-argument)
-   `("s" . ,search-map)
-   '("p" . "C-x p"))
+   (meow-leader-define-key
+    '("?" . meow-cheatsheet)
+    '("1" . meow-digit-argument)
+    '("2" . meow-digit-argument)
+    '("3" . meow-digit-argument)
+    '("4" . meow-digit-argument)
+    '("5" . meow-digit-argument)
+    '("6" . meow-digit-argument)
+    '("7" . meow-digit-argument)
+    '("8" . meow-digit-argument)
+    '("9" . meow-digit-argument)
+    '("0" . meow-digit-argument)
+    '("l" . meow-universal-argument)
+    `("s" . ,search-map)
+    '("p" . "C-x p"))
 
-  (meow-normal-define-key
-   '("0" . meow-expand-0)
-   '("1" . meow-expand-1)
-   '("2" . meow-expand-2)
-   '("3" . meow-expand-3)
-   '("4" . meow-expand-4)
-   '("5" . meow-expand-5)
-   '("6" . meow-expand-6)
-   '("7" . meow-expand-7)
-   '("8" . meow-expand-8)
-   '("9" . meow-expand-9)
-   '("a" . meow-append)
-   '("A" . meow-open-below)
-   '("c" . meow-change)
-   '("d" . meow-kill)
-   '("D" . meow-C-k)
-   '("e" . meow-next)
-   '("E" . meow-next-expand)
-   '("f" . meow-next-word)
-   '("F" . meow-next-symbol)
-   `("g" . ,goto-map)
-   '("G" . meow-grab)
-   '("h" . meow-mark-word)
-   '("H" . meow-mark-symbol)
-   '("i" . meow-right)
-   '("I" . meow-right-expand)
-   '("j" . "gc")
-   '("l" . meow-line)
-   '("L" . meow-goto-line)
-   '("m" . meow-undo)
-   '("M" . meow-undo-in-selection)
-   '("n" . meow-left)
-   '("N" . meow-left-expand)
-   '("o" . meow-tree-sitter-node)
-   '("O" . meow-to-block)
-   '("p" . meow-replace)
-   '("P" . meow-yank-pop)
-   '("q" . meow-quit)
-   '("r" . meow-join)
-   '("s" . meow-insert)
-   '("S" . meow-open-above)
-   '("t" . meow-till)
-   '("T" . meow-find)
-   '("u" . meow-prev)
-   '("U" . meow-prev-expand)
-   '("v" . meow-search)
-   '("w" . meow-back-word)
-   '("W" . meow-back-symbol)
-   '("x" . meow-swap-grab)
-   '("X" . meow-pop-selection)
-   '("y" . meow-save)
-   '("z" . meow-pop-to-mark)
-   '("Z" . meow-unpop-to-mark)
-   '("'" . repeat)
-   '(";" . meow-reverse)
-   '("-" . negative-argument)
-   '("=" . meow-indent)
-   '("," . meow-inner-of-thing)
-   '("." . meow-bounds-of-thing)
-   '("[" . meow-beginning-of-thing)
-   '("]" . meow-end-of-thing)
-   '("/" . meow-visit)
-   '("<escape>" . meow-cancel-selection))
+   (meow-normal-define-key
+    '("0" . meow-expand-0)
+    '("1" . meow-expand-1)
+    '("2" . meow-expand-2)
+    '("3" . meow-expand-3)
+    '("4" . meow-expand-4)
+    '("5" . meow-expand-5)
+    '("6" . meow-expand-6)
+    '("7" . meow-expand-7)
+    '("8" . meow-expand-8)
+    '("9" . meow-expand-9)
+    '("a" . meow-append)
+    '("A" . meow-open-below)
+    '("c" . meow-change)
+    '("d" . meow-kill)
+    '("D" . meow-C-k)
+    '("e" . meow-next)
+    '("E" . meow-next-expand)
+    '("f" . meow-next-word)
+    '("F" . meow-next-symbol)
+    `("g" . ,goto-map)
+    '("G" . meow-grab)
+    '("h" . meow-mark-word)
+    '("H" . meow-mark-symbol)
+    '("i" . meow-right)
+    '("I" . meow-right-expand)
+    '("j" . "gc")
+    '("l" . meow-line)
+    '("L" . meow-goto-line)
+    '("m" . meow-undo)
+    '("M" . meow-undo-in-selection)
+    '("n" . meow-left)
+    '("N" . meow-left-expand)
+    '("o" . meow-tree-sitter-node)
+    '("O" . meow-to-block)
+    '("p" . meow-replace)
+    '("P" . meow-yank-pop)
+    '("q" . meow-quit)
+    '("r" . meow-join)
+    '("s" . meow-insert)
+    '("S" . meow-open-above)
+    '("t" . meow-till)
+    '("T" . meow-find)
+    '("u" . meow-prev)
+    '("U" . meow-prev-expand)
+    '("v" . meow-search)
+    '("w" . meow-back-word)
+    '("W" . meow-back-symbol)
+    '("x" . meow-swap-grab)
+    '("X" . meow-pop-selection)
+    '("y" . meow-save)
+    '("z" . meow-pop-to-mark)
+    '("Z" . meow-unpop-to-mark)
+    '("'" . repeat)
+    '(";" . meow-reverse)
+    '("-" . negative-argument)
+    '("=" . meow-indent)
+    '("," . meow-inner-of-thing)
+    '("." . meow-bounds-of-thing)
+    '("[" . meow-beginning-of-thing)
+    '("]" . meow-end-of-thing)
+    '("/" . meow-visit)
+    '("<escape>" . meow-cancel-selection))
 
-  (dolist (cmd '((meow-kill    . meow-delete)
-                 (meow-replace . meow-yank)
-                 (meow-reverse . negative-argument)))
-    (setf (alist-get (car cmd) meow-selection-command-fallback)
-          (cdr cmd)))
-  (dotimes (i 10)
-    (setf (alist-get (intern (format "meow-expand-%s" i))
-                     meow-selection-command-fallback)
-          #'meow-digit-argument))
+   (dolist (cmd '((meow-kill    . meow-delete)
+                  (meow-replace . meow-yank)
+                  (meow-reverse . negative-argument)))
+     (setf (alist-get (car cmd) meow-selection-command-fallback)
+           (cdr cmd)))
+   (dotimes (i 10)
+     (setf (alist-get (intern (format "meow-expand-%s" i))
+                      meow-selection-command-fallback)
+           #'meow-digit-argument))
 
-  (meow-global-mode)
+   (meow-global-mode))
 #+end_src
 
 Unbind some keys that get in the way of binds that I use /far/ more often, since Meow prioritizes keys with the control modifier (e.g. =C-f= over =f=).
@@ -1576,34 +1585,38 @@ Wrap Eglot to ensure that completions aren't cached (since LSPs usually don't re
 
 ** Direnv
 #+begin_src elisp
-  (add-hook 'my/first-file-hook #'envrc-global-mode)
+  (desktop!
+   (add-hook 'my/first-file-hook #'envrc-global-mode))
 #+end_src
 
 Force Org Babel blocks to inherit their buffer's environment.
 #+begin_src elisp
-  (after! org
-    (advice-add #'org-babel-execute-src-block :around #'envrc-propagate-environment))
+  (desktop!
+   (after! org
+     (advice-add #'org-babel-execute-src-block
+                 :around #'envrc-propagate-environment)))
 #+end_src
 
 Command to enable Direnv for Nix.
 #+begin_src elisp
-  (defun my/direnv-use-nix ()
-    "Create an .envrc file to enable Direnv for Nix."
-    (interactive)
-    (let* ((dir (if-let* ((proj (project-current)))
-                    (project-root proj)
-                  default-directory))
-           (path (expand-file-name ".envrc" dir))
-           (shell (expand-file-name "shell.nix" dir))
-           (flake (expand-file-name "flake.nix" dir)))
-      (when (file-exists-p path)
-        (user-error ".envrc file already exists"))
-      (with-temp-file path
-        (insert (cond
-                 ((file-exists-p flake) "use flake")
-                 ((file-exists-p shell) "use nix")
-                 (t (user-error "Could not find Nix environment file")))))
-      (envrc-allow)))
+  (desktop!
+   (defun my/direnv-use-nix ()
+     "Create an .envrc file to enable Direnv for Nix."
+     (interactive)
+     (let* ((dir (if-let* ((proj (project-current)))
+                     (project-root proj)
+                   default-directory))
+            (path (expand-file-name ".envrc" dir))
+            (shell (expand-file-name "shell.nix" dir))
+            (flake (expand-file-name "flake.nix" dir)))
+       (when (file-exists-p path)
+         (user-error ".envrc file already exists"))
+       (with-temp-file path
+          (insert (cond)
+                  ((file-exists-p flake) "use flake")
+                  ((file-exists-p shell) "use nix")
+                  (t (user-error "Could not find Nix environment file"))))
+       (envrc-allow))))
 #+end_src
 
 ** YASnippet
@@ -1764,10 +1777,11 @@ Show a little pilot icon from Nerd Fonts in the modeline when enabled.
 ** PDF Tools
 In addition to auto-loading via filename or magic values, we also want to load the package if [[*Dirvish][Dirvish]] is opened, since it requires PDF Tools to be loaded for PDF previews to work.
 #+begin_src elisp
-  (pdf-loader-install)
+  (desktop!
+   (pdf-loader-install)
 
-  (after! dirvish
-    (add-hook 'dirvish-directory-view-mode-hook #'pdf-tools-install))
+   (after! dirvish
+     (add-hook 'dirvish-directory-view-mode-hook #'pdf-tools-install)))
 
   (after! pdf-tools
     (bind-key "?" #'gptel-quick pdf-view-mode-map)
@@ -1780,21 +1794,22 @@ In addition to auto-loading via filename or magic values, we also want to load t
 
 ** Zoxide
 #+begin_src elisp
-  (defun my/zoxide-add-safe (&optional path &rest _)
-    "Call `zoxide-add' if PATH exists."
-    (require! 'zoxide)
-    (unless path
-      (setq path (funcall zoxide-get-path-function 'add)))
-    (when (file-exists-p path)
-      (zoxide-add path))
-    ;; Return nil, otherwise running inside `dirvish-find-entry-hook' inhibits
-    ;; `dirvish--find-entry'.
-    nil)
+  (desktop!
+   (defun my/zoxide-add-safe (&optional path &rest _)
+     "Call `zoxide-add' if PATH exists."
+     (require! 'zoxide)
+     (unless path
+       (setq path (funcall zoxide-get-path-function 'add)))
+     (when (file-exists-p path)
+       (zoxide-add path))
+     ;; Return nil, otherwise running inside `dirvish-find-entry-hook' inhibits
+     ;; `dirvish--find-entry'.
+     nil)
 
-  (add-hooks! '(find-file-hook
-                eshell-directory-change-hook
-                dirvish-find-entry-hook)
-              #'my/zoxide-add-safe)
+   (add-hooks! '(find-file-hook
+                 eshell-directory-change-hook
+                 dirvish-find-entry-hook)
+               #'my/zoxide-add-safe))
 #+end_src
 
 ** Focus
@@ -1840,14 +1855,16 @@ In addition to auto-loading via filename or magic values, we also want to load t
 
 ** Jinx
 #+begin_src elisp
-  (add-hook 'text-mode-hook #'jinx-mode)
-  (bind-key [remap ispell-word] #'jinx-correct)
+  (desktop!
+   (add-hook 'text-mode-hook #'jinx-mode)
+   (bind-key [remap ispell-word] #'jinx-correct))
 #+end_src
 
 ** Ispell
 #+begin_src elisp
-  (after! ispell
-    (setopt ispell-alternate-dictionary (getenv "WORDLIST")))
+  (desktop!
+   (after! ispell
+     (setopt ispell-alternate-dictionary (getenv "WORDLIST"))))
 #+end_src
 
 ** Apheleia
@@ -2114,24 +2131,26 @@ Based off code from [[https://github.com/karthink/gptel/wiki/gptel%E2%80%90rewri
 ** =consult-mu=
 For some reason, this package is failing to byte-compile, so I'm just going to install it manually for now ¯\_(ツ)_/¯. Mainly needed for [[*=consult-omni=][consult-omni]].
 #+begin_src elisp
-  (cl-pushnew "@consult_mu_src@" load-path
-              :test #'equal)
+  (desktop!
+   (cl-pushnew "@consult_mu_src@" load-path
+               :test #'equal))
 #+end_src
 
 ** =consult-omni=
 The repository comes with many different files for "sources", that each have various dependencies; I don't need all of them, nor want to install all dependencies, so I'm installing the package manually.
 #+begin_src elisp
-  (eval-and-compile
-    (cl-pushnew "@consult_omni_src@" load-path
-                :test #'equal)
-    (cl-pushnew "@consult_omni_src@/sources" load-path
-                :test #'equal))
+  (desktop!
+   (eval-and-compile
+     (cl-pushnew "@consult_omni_src@" load-path
+                 :test #'equal)
+     (cl-pushnew "@consult_omni_src@/sources" load-path
+                 :test #'equal))
 
-  (autoload #'consult-omni "consult-omni" "Convinient wrapper function for favorite interactive command.
+   (autoload #'consult-omni "consult-omni" "Convinient wrapper function for favorite interactive command.
 
   Calls the function in `consult-omni-default-interactive-command'." t)
 
-  (bind-key "C-S-s" #'consult-omni)
+   (bind-key "C-S-s" #'consult-omni))
 
   (after! consult-omni
     ;; For some reason, if `mu4e' doesn't load properly, `consult-omni-mu4e'
@@ -3548,10 +3567,11 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
 
 ** mu4e
 #+begin_src elisp
-  (bind-key "e" #'mu4e my/open-map)
+  (desktop!
+   (bind-key "e" #'mu4e my/open-map)
 
-  (setq mail-user-agent #'mu4e-user-agent
-        read-mail-command #'mu4e)
+   (setq mail-user-agent #'mu4e-user-agent
+         read-mail-command #'mu4e))
 
   (add-hook 'mu4e-headers-mode-hook (lambda ()
                                       (visual-line-mode -1)
