--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -960,9 +960,12 @@ This is such an important addition to Emacs.
 
 ** ElDoc Box
 #+begin_src elisp
-  (add-hook 'eldoc-mode-hook #'eldoc-box-hover-mode)
+  (add-hook 'eldoc-mode-hook #'eldoc-box-hover-at-point-mode)
 
   (after! eldoc-box
+    (setopt eldoc-box-max-pixel-width (##floor (* 0.6 (frame-pixel-width)))
+            eldoc-box-max-pixel-height (##floor (* 0.25 (frame-pixel-height))))
+    
     (ef-themes-with-colors
       (custom-set-faces
        `(eldoc-box-border ((t :background ,bg-main)))
