fix(home/emacs): use new spacious-padding option, style header line

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -920,8 +920,8 @@ Set up PragmataPro and enable [[help:prettify-symbols-mode][prettify-symbols-mod
   (add-hook 'window-setup-hook #'spacious-padding-mode)
 
   (after! spacious-padding
-    (setq spacious-padding-subtle-mode-line
-          '(:mode-line-active error)
+    (setq spacious-padding-subtle-frame-lines
+          '(:mode-line-active error :header-line-active error)
           spacious-padding-widths
           (plist-put spacious-padding-widths
                      :right-divider-width 0)))
