feat(home/emacs): update elfeed-protocol config to use miniflux

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3832,18 +3832,19 @@ Set up some keybinds. I like "U" to update to mirror [[*mu4e][mu4e]]'s behavior 
             elfeed-search-filter "@6-months-ago +unread "))
 #+end_src
 
-*** =elfeed-protocol=
+*** elfeed-protocol
 Fetch feeds from my Tiny Tiny RSS server via [[https://github.com/fasheng/elfeed-protocol][elfeed-protocol]].
 #+begin_src elisp
   (after! elfeed
     (require 'elfeed-protocol)
 
-    (setopt elfeed-protocol-enabled-protocols '(ttrss)
-            elfeed-protocol-feeds '(("ttrss+http://ad@feeds.adtailnet"
-                                     :password (secrets-get-secret
-                                                "KeePassXC" "Tiny Tiny RSS")))
-            elfeed-protocol-ttrss-maxsize 200
-            elfeed-protocol-ttrss-fetch-category-as-tag t)
+    (let ((domain (concat "feeds." (my/private 'domain 'private))))
+      (setopt elfeed-protocol-enabled-protocols '(fever)
+              elfeed-protocol-feeds
+              `((,(concat "fever+https://ad@" domain)
+                 :api-url ,(format "https://%s/fever/" domain)
+                 :password (secrets-get-secret
+                            "KeePassXC" "Miniflux Fever API")))))
 
     (elfeed-protocol-enable))
 #+end_src
