feat(home/emacs): enthium for meow
Also some other random changes to hopefully use Meow more efficiently (the
commands are not very well-documented 😐).

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1061,8 +1061,7 @@ There's no built-in function to delete the current file, so here's mine.
 #+begin_src elisp
   (require 'meow)
 
-  (setq meow-cheatsheet-layout meow-cheatsheet-layout-colemak-dh
-        meow-use-clipboard t
+  (setq meow-use-clipboard t
         meow-keypad-self-insert-undefined nil
         auto-save-visited-predicate (##not (meow-insert-mode-p)))
   (ef-themes-with-colors
@@ -1072,12 +1071,11 @@ There's no built-in function to delete the current file, so here's mine.
      `(meow-keypad-indicator ((t :foreground ,fg-removed)))))
 
   (meow-motion-define-key
-   '("e"        . meow-next)
-   '("u"        . meow-prev)
+   '("t"        . meow-next)
+   '("n"        . meow-prev)
    '("<escape>" . keyboard-escape-quit))
 
   (meow-leader-define-key
-   '("?" . meow-cheatsheet)
    '("1" . meow-digit-argument)
    '("2" . meow-digit-argument)
    '("3" . meow-digit-argument)
@@ -1088,7 +1086,8 @@ There's no built-in function to delete the current file, so here's mine.
    '("8" . meow-digit-argument)
    '("9" . meow-digit-argument)
    '("0" . meow-digit-argument)
-   '("l" . meow-universal-argument)
+   '("/" . meow-keypad-describe-key)
+   '("u" . meow-universal-argument)
    `("s" . ,search-map)
    '("p" . "C-x p"))
 
@@ -1105,46 +1104,48 @@ There's no built-in function to delete the current file, so here's mine.
    '("9" . meow-expand-9)
    '("a" . meow-append)
    '("A" . meow-open-below)
+   '("b" . meow-back-word)
+   '("B" . meow-back-symbol)
    '("c" . meow-change)
    '("d" . meow-kill)
    '("D" . meow-C-k)
-   '("e" . meow-next)
-   '("E" . meow-next-expand)
-   '("f" . meow-next-word)
-   '("F" . meow-next-symbol)
+   '("e" . meow-till)
+   '("f" . meow-find)
    `("g" . ,goto-map)
    '("G" . meow-grab)
-   '("h" . meow-mark-word)
-   '("H" . meow-mark-symbol)
-   '("i" . meow-right)
-   '("I" . meow-right-expand)
+   '("h" . meow-left)
+   '("H" . meow-left-expand)
+   '("i" . meow-insert)
+   '("I" . meow-open-above)
    '("j" . "gc")
+   '("k" . meow-grab)
+   '("K" . meow-unpop-to-mark)
    '("l" . meow-line)
    '("L" . meow-goto-line)
-   '("m" . meow-undo)
-   '("M" . meow-undo-in-selection)
-   '("n" . meow-left)
-   '("N" . meow-left-expand)
+   '("m" . meow-mark-word)
+   '("M" . meow-mark-symbol)
+   '("n" . meow-prev)
+   '("N" . meow-prev-expand)
    '("o" . meow-tree-sitter-node)
    '("O" . meow-to-block)
    '("p" . meow-replace)
    '("P" . meow-yank-pop)
    '("q" . meow-quit)
    '("r" . meow-join)
-   '("s" . meow-insert)
-   '("S" . meow-open-above)
-   '("t" . meow-till)
-   '("T" . meow-find)
-   '("u" . meow-prev)
-   '("U" . meow-prev-expand)
+   '("s" . meow-right)
+   '("S" . meow-right-expand)
+   '("t" . meow-next)
+   '("T" . meow-next-expand)
+   '("u" . meow-undo)
+   '("U" . meow-undo-in-selection)
    '("v" . meow-search)
-   '("w" . meow-back-word)
-   '("W" . meow-back-symbol)
+   '("w" . meow-next-word)
+   '("W" . meow-next-symbol)
    '("x" . meow-swap-grab)
-   '("X" . meow-pop-selection)
+   '("X" . meow-sync-grab)
    '("y" . meow-save)
-   '("z" . meow-pop-to-mark)
-   '("Z" . meow-unpop-to-mark)
+   '("z" . meow-pop-selection)
+   '("Z" . meow-pop-to-mark)
    '("'" . repeat)
    '(";" . meow-reverse)
    '("-" . negative-argument)
