--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2825,14 +2825,16 @@ Habits.
 ** Org Attach
 #+begin_src elisp
   (after! org-attach
-    (setopt org-attach-id-dir "attach")
+    (setopt org-attach-auto-tag "attach"
+            org-attach-store-link-p t
+            org-attach-method 'mv)
+    
     (defun my/insert-org-attach-dir ()
       "Insert the current org-attach directory relative to
    `org-directory', creating it if needed."
       (interactive)
-      (insert
-       (file-relative-name (org-attach-dir-get-create)
-                           org-directory))))
+      (insert (file-relative-name (org-attach-dir-get-create)
+                                  org-directory))))
 #+end_src
 
 ** Org Modern
