feat(home/emacs): use elfeed-protocol-miniflux

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3892,18 +3892,15 @@ Set up some keybinds. I like "U" to update to mirror [[*mu4e][mu4e]]'s behavior 
 #+end_src
 
 *** elfeed-protocol
-Fetch feeds from my Tiny Tiny RSS server via [[https://github.com/fasheng/elfeed-protocol][elfeed-protocol]].
+Fetch feeds from my Miniflux server via [[https://github.com/fasheng/elfeed-protocol][elfeed-protocol]] and [[https://github.com/skissue/gxy/blob/main/elisp/elfeed-protocol-miniflux.el][elfeed-protocol-miniflux]].
 #+begin_src elisp
   (after! elfeed
     (require 'elfeed-protocol)
 
-    (let ((domain (concat "feeds." (my/private 'domain 'private))))
-      (setopt elfeed-protocol-enabled-protocols '(fever)
-              elfeed-protocol-feeds
-              `((,(concat "fever+https://ad@" domain)
-                 :api-url ,(format "https://%s/fever/" domain)
-                 :password (secrets-get-secret
-                            "KeePassXC" "Miniflux Fever API")))))
+    (setopt elfeed-protocol-enabled-protocols '(miniflux)
+            elfeed-protocol-feeds
+            `((,(concat "miniflux+https://feeds." (my/private 'domain 'private))
+               :password (secrets-get-secret "KeePassXC" "Miniflux API"))))
 
     (elfeed-protocol-enable))
 #+end_src
