feat(home/emacs): switch fully to doric-obsidian

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -905,19 +905,30 @@ Set up PragmataPro and enable [[help:prettify-symbols-mode][prettify-symbols-mod
 
 ** Theme
 #+begin_src elisp
-  (require 'ef-themes)
+  (require 'doric-themes)
+  (doric-themes-load-theme 'doric-obsidian)
+#+end_src
 
-  (setq ef-themes-bold-constructs t
-        ef-themes-italic-constructs t
-        ef-themes-mixed-fonts t
-        ef-themes-headings '((0 1.8)
-                             (1 variable-pitch light 1.5)
-                             (2 variable-pitch light 1.4)
-                             (3 variable-pitch light 1.3)
-                             (4 variable-pitch light 1.2)
-                             (t variable-pitch light 1.1)))
-
-  (ef-themes-load-theme 'ef-owl)
+Make outline/Org headings sized up. Need to override Doric's default Org heading settings.
+#+begin_src elisp
+  (custom-set-faces
+   '(outline-1          ((t :inherit variable-pitch :weight light :height 1.5)))
+   '(outline-2          ((t :inherit variable-pitch :weight light :height 1.4)))
+   '(outline-3          ((t :inherit variable-pitch :weight light :height 1.3)))
+   '(outline-4          ((t :inherit variable-pitch :weight light :height 1.2)))
+   '(outline-5          ((t :inherit variable-pitch :weight light :height 1.1)))
+   '(outline-6          ((t :inherit variable-pitch :weight light :height 1.1)))
+   '(outline-7          ((t :inherit variable-pitch :weight light :height 1.1)))
+   '(outline-8          ((t :inherit variable-pitch :weight light :height 1.1)))
+   '(org-document-title ((t :height 1.8)))
+   '(org-level-1        ((t :inherit outline-1)))
+   '(org-level-2        ((t :inherit outline-2)))
+   '(org-level-3        ((t :inherit outline-3)))
+   '(org-level-4        ((t :inherit outline-4)))
+   '(org-level-5        ((t :inherit outline-5)))
+   '(org-level-6        ((t :inherit outline-6)))
+   '(org-level-7        ((t :inherit outline-7)))
+   '(org-level-8        ((t :inherit outline-8))))
 #+end_src
 
 ** Spacious Padding
@@ -971,7 +982,7 @@ This is such an important addition to Emacs.
     (setopt eldoc-box-max-pixel-width (##floor (* 0.6 (frame-pixel-width)))
             eldoc-box-max-pixel-height (##floor (* 0.25 (frame-pixel-height))))
     
-    (ef-themes-with-colors
+    (doric-themes-with-colors
       (custom-set-faces
        `(eldoc-box-border ((t :background ,bg-main)))
        '(eldoc-box-body ((t :inherit variable-pitch)))))
@@ -1069,11 +1080,11 @@ There's no built-in function to delete the current file, so here's mine.
   (setq meow-use-clipboard t
         meow-keypad-self-insert-undefined nil
         auto-save-visited-predicate (##not (meow-insert-mode-p)))
-  (ef-themes-with-colors
+  (doric-themes-with-colors
     (custom-set-faces
-     `(meow-insert-indicator ((t :foreground ,fg-added)))
-     `(meow-beacon-indicator ((t :foreground ,fg-changed)))
-     `(meow-keypad-indicator ((t :foreground ,fg-removed)))))
+     `(meow-insert-indicator ((t :foreground ,fg-green)))
+     `(meow-beacon-indicator ((t :foreground ,fg-cyan)))
+     `(meow-keypad-indicator ((t :foreground ,fg-red)))))
 
   (meow-motion-define-key
    '("t"        . meow-next)
@@ -1789,12 +1800,12 @@ In addition to auto-loading via filename or magic values, we also want to load t
   (add-hook 'prog-mode-hook #'hl-todo-mode)
 
   (after! hl-todo
-    (ef-themes-with-colors
+    (doric-themes-with-colors
       (setopt hl-todo-keyword-faces
-              `(("TODO" . ,green)
-                ("FIXME" . ,yellow)
-                ("HACK" . ,cyan)
-                ("NOTE" . ,blue)))))
+              `(("TODO" . ,fg-green)
+                ("FIXME" . ,fg-yellow)
+                ("HACK" . ,fg-cyan)
+                ("NOTE" . ,fg-blue)))))
 #+end_src
 
 #+begin_src elisp
@@ -2633,11 +2644,11 @@ Ah, the crown jewel of Emacs 👑.
             org-cycle-separator-lines              0
             org-blank-before-new-entry             '((heading . t)
                                                      (plain-list-item . auto))
-            org-todo-keyword-faces (ef-themes-with-colors
+            org-todo-keyword-faces (doric-themes-with-colors
                                      `(("CANCELED"
-                                        :foreground ,red)
+                                        :foreground ,fg-red)
                                        ("WAIT"
-                                        :foreground ,yellow)))
+                                        :foreground ,fg-yellow)))
             org-refile-targets     '((nil :maxlevel . 2)
                                      (org-agenda-files :maxlevel . 2)))
     (custom-set-faces
@@ -2726,12 +2737,12 @@ Ah, the crown jewel of Emacs 👑.
             org-agenda-deadline-faces '((0.8 . org-imminent-deadline)
                                         (0.5 . org-upcoming-deadline)
                                         (0.0 . org-upcoming-distant-deadline)))
-    (ef-themes-with-colors
+    (doric-themes-with-colors
       (custom-set-faces
-       `(org-scheduled-today           ((t (:foreground ,magenta :weight bold))))
-       `(org-imminent-deadline         ((t (:foreground ,red    :weight semibold))))
-       `(org-upcoming-deadline         ((t (:foreground ,yellow :weight medium))))
-       `(org-upcoming-distant-deadline ((t (:foreground ,yellow :weight light)))))))
+       `(org-scheduled-today           ((t (:foreground ,fg-magenta :weight bold))))
+       `(org-imminent-deadline         ((t (:foreground ,fg-red    :weight semibold))))
+       `(org-upcoming-deadline         ((t (:foreground ,fg-yellow :weight medium))))
+       `(org-upcoming-distant-deadline ((t (:foreground ,fg-yellow :weight light)))))))
 #+end_src
 
 Habits.
@@ -2868,21 +2879,21 @@ Make Org Mode pretty! Star replacement symbols are taken from [[https://github.c
             org-modern-star 'replace
             org-modern-replace-stars "§∯δσ𝛼∞𝜺"
             ;; For some reason, inheriting from `org-modern-todo' messes with the size
-            org-modern-todo-faces (ef-themes-with-colors
+            org-modern-todo-faces (doric-themes-with-colors
                                     `(("CANCELED"
                                        :inverse-video t
                                        :weight semibold
-                                       :foreground ,red)
+                                       :foreground ,fg-red)
                                       ("WAIT"
                                        :inverse-video t
                                        :weight semibold
-                                       :foreground ,yellow))))
-    (ef-themes-with-colors
+                                       :foreground ,fg-yellow))))
+    (doric-themes-with-colors
       (custom-set-faces
        '(org-modern-label ((t :height 1.0
                               :inherit fixed-pitch)))
        `(org-modern-done ((t :inherit org-modern-todo
-                             :foreground ,green)))
+                             :foreground ,fg-green)))
        '(org-modern-symbol ((t (:family "Maple Mono NF" :height 1.1)))))))
 #+end_src
 
@@ -3129,8 +3140,8 @@ The bleeding-edge development branch of Org that I'm using has a small bug in th
 
 #+begin_src elisp
   (after! nice-org-html
-    (setopt nice-org-html-theme-alist `((light . ef-light)
-                                        (dark  . ,(ef-themes--current-theme)))
+    (setopt nice-org-html-theme-alist `((light . doric-light)
+                                        (dark  . doric-dark))
             nice-org-html-default-mode 'dark
             nice-org-html-options '(:collapsing t
                                                 :src-lang t)))
